<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_New_Question"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvQusOrAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="question/ans"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etQustion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/create_question_edittext_border"
            android:gravity="start"
            android:hint="@string/Enter_Your_Answer"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="5"
            android:minLines="6"
            android:padding="5dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorCreateNewQuestionButton"
                android:text="@string/Post" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorRed"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>