<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:orientation="vertical">


                <!--First Name-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Current_Password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingBottom="14dp"
                    android:paddingRight="10dp"
                    android:paddingTop="6dp"/>


                <!--Last Name-->
                <TextView
                    android:id="@+id/tvLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/New_Password"/>

                <EditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingBottom="14dp"
                    android:paddingRight="10dp"
                    android:paddingTop="6dp"/>


                <!--Email-->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Confirm_Password"/>

                <EditText
                    android:id="@+id/et_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingBottom="14dp"
                    android:paddingRight="10dp"
                    android:paddingTop="6dp"/>

                <!--Button signup-->
                <Button
                    android:id="@+id/btnchangepwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorCreateNewQuestionButton"
                    android:layout_marginTop="38dp"
                    android:text="@string/Change_Password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>